EXTRA_DIST = \
  gradient.py \
  hering.py \
  spiral.py \
  warpedtext.py \
  cairo_snippets/snippets_gtk.py \
  cairo_snippets/snippets_pdf.py \
  cairo_snippets/snippets_png.py \
  cairo_snippets/snippets_ps.py \
  cairo_snippets/snippets_svg.py \
  cairo_snippets/snippets/arc_negative.py \
  cairo_snippets/snippets/arc.py \
  cairo_snippets/snippets/clip.py \
  cairo_snippets/snippets/curve_rectangle.py \
  cairo_snippets/snippets/curve_to.py \
  cairo_snippets/snippets/ellipse.py \
  cairo_snippets/snippets/fill_and_stroke2.py \
  cairo_snippets/snippets/fill_and_stroke.py \
  cairo_snippets/snippets/glyph_path.py \
  cairo_snippets/snippets/gradient.py \
  cairo_snippets/snippets/gradient_mask.py \
  cairo_snippets/snippets/group.py \
  cairo_snippets/snippets/__init__.py \
  cairo_snippets/snippets/path.py \
  cairo_snippets/snippets/set_line_cap.py \
  cairo_snippets/snippets/set_line_join.py \
  cairo_snippets/snippets/show_glyphs.py \
  cairo_snippets/snippets/text_align_center.py \
  cairo_snippets/snippets/text_extents.py \
  cairo_snippets/snippets/text.py \
  gtk/cairo-demo.py \
  gtk/cairo-knockout.py \
  gtk/hangman.py \
  gtk/lsystem.py \
  gtk/png_view.py \
  gtk/text.py
